--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 *,
 *:before,
 *:after {
-  border: 1px solid lightblue;
+  /*border: 1px solid lightblue;*/
   box-sizing: border-box;
 }
 
@@ -29,6 +29,10 @@ a {
 	text-decoration: none;
 }
 
+.main-wrapper {
+		margin: 3em;
+}
+
 /*HEADING*/
 .section__heading {
 
@@ -45,13 +49,34 @@ a {
 }
 
 .photo {
-	width: 70%;
+	width: 100%;
 }
 
 /*TEXT*/
 .section__text {
 
 }
+
+.text__list-heading {
+	margin-top: 1.5em;
+	margin-bottom: 0;
+}
+
 .text__list {
+	margin-top: 0.3em;
 	padding-left: 1em;
+	line-height: 1.5em;
+}
+
+.text__main {
+	line-height: 1.5em;
+}
+
+/*FOOTER*/
+.section__footer {
+	text-transform: uppercase;
+	color: #9B9B9B;
+	font-size: 0.5em;
+	letter-spacing: 0.3em;
+	text-align: right;
 }
