--- a/style-min.css
+++ b/style-min.css
@@ -1,15 +1,12 @@
 /*TO DO*/
 /*DESKTOP VERSION*/
-/*mobile view: circle bug*/
 /*image lazy loading*/
-/*refactor code (esp media queries)*/
-/*where is my favicon?*/
-/*title: letterspacing -0.04rem*/
 /*ROOM FOR IMPROVEMENT*/
-/*fix dot, arrows and HZ alignment*/
-/*Fix the circle sizing*/
+/*fix dot, arrows and HZ alignment (safari)*/
+/*Fix the circle sizing -- esp mobile*/
 /*browerstack testing*/
 /*carousel javascript refactor*/
+/*refactor code (esp media queries)*/
 /*first arrow should be greyed and unclickable*/
 /*EXTRA EXTRA*/
 /*animation on load?*/
@@ -75,6 +72,10 @@ a {
           flex-grow: .8; }
 
 /*HEADING*/
+.section__heading {
+  position: relative;
+  z-index: 10; }
+
 @media (min-width: 500px) {
   .section__heading {
     margin-top: 3rem; } }
@@ -85,8 +86,8 @@ a {
 
 @media (min-width: 1200px) {
   .section__heading {
-    width: 40%;
-    margin-top: 0;
+    width: 29%;
+    margin-top: 1.5rem;
     float: left; } }
 
 .heading__title {
@@ -95,7 +96,8 @@ a {
 
 .title {
   font-size: 2.2rem;
-  position: relative; }
+  position: relative;
+  letter-spacing: -0.02rem; }
 
 @media (min-width: 500px) {
   .title {
@@ -105,10 +107,14 @@ a {
   .title {
     font-size: 3.6rem; } }
 
+@media (min-width: 1200px) {
+  .title {
+    font-size: 4.3rem; } }
+
 .title__second {
   position: absolute;
-  bottom: -0.4em;
-  right: -1.98em; }
+  bottom: -0.35em;
+  right: -1.95em; }
 
 /*PHOTO*/
 .section__photo {
@@ -125,7 +131,7 @@ a {
 
 @media (min-width: 1200px) {
   .section__photo {
-    width: 60%;
+    width: 71%;
     float: left; } }
 
 .photos {
@@ -185,9 +191,9 @@ a {
 
 @media (min-width: 1200px) {
   .photo__caption {
-    font-size: .6rem;
-    margin-top: .8rem;
-    letter-spacing: .21rem; } }
+    font-size: .7rem;
+    margin-top: .7rem;
+    letter-spacing: .25rem; } }
 
 .photo__text {
   /*display: inline-block;*/
@@ -244,6 +250,8 @@ a {
 
 /*TEXT*/
 .section__text {
+  position: relative;
+  z-index: 10;
   margin-top: 1.6em; }
 
 @media (min-width: 900px) {
@@ -252,9 +260,10 @@ a {
 
 @media (min-width: 1200px) {
   .section__text {
-    width: 40%;
+    width: 38%;
     float: left;
-    margin-top: -30%;
+    /*bad practice:*/
+    margin-top: -19rem;
     padding-right: 2rem; } }
 
 .text__list-heading {
@@ -266,6 +275,10 @@ a {
     margin-top: 1.2em;
     line-height: 1.8rem;
     font-size: 1.2rem; } }
+
+@media (min-width: 1200px) {
+  .text__list-heading {
+    font-size: 1.3rem; } }
 
 .text__list {
   margin-top: .3em;
@@ -285,7 +298,8 @@ a {
 @media (min-width: 1200px) {
   .text__main {
     max-width: 18rem;
-    margin-top: 3.2rem; } }
+    font-size: 1.3rem;
+    line-height: 1.9rem; } }
 
 .text__icon svg {
   width: 16px;
