--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a {
 
 @media (min-width: 1200px) {
 	.margin-wrapper {
+		padding: 2rem 10rem;
 		margin: 0 auto;
 		max-width: 75rem;
 	}
@@ -225,7 +226,7 @@ a {
 @media (min-width: 1200px) {
 	.photo__caption  {
 		font-size: .7rem;
-		margin-top: .7rem;
+		margin-top: .9rem;
 		letter-spacing: .25rem;
 	}
 }
@@ -241,7 +242,7 @@ a {
 
 .caption {
 	display: inline-block;
-	width: 5.5rem;
+	min-width: 5.5rem;
 	height: 1.2rem;
 	padding-top: .2rem;
 	position: relative;
@@ -256,13 +257,14 @@ a {
 
 @media (min-width: 900px) {
 	.caption {
-		width: 7rem;
+		min-width: 7rem;
 	}
 }
 
 @media (min-width: 1200px) {
 	.caption {
-		padding-top: .35rem;
+		min-width: 8rem;
+		padding-top: .25rem;
 	}
 }
 
@@ -337,9 +339,26 @@ a {
 }
 
 .text__list {
-	margin-top: .3em;
+	margin-top: .6em;
 	padding-left: 1.8rem;
-	line-height: 1.4em;
+	line-height: 1.3em;
+}
+
+ol {
+	list-style: none;
+	counter-reset: li;
+}
+li::before {
+	content: counter(li);
+	font-weight: 500;
+	font-size: .7rem;
+  display: inline-block;
+	width: 1em;
+  margin-left: -1em;
+}
+
+li {
+	counter-increment: li;
 }
 
 .text__main {
