--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*TO DO*/
-/*DESKTOP VERSION*/
+/*DESKTOP VERSION -- margin top of text*/
 /*image lazy loading*/
 
 /*ROOM FOR IMPROVEMENT*/
@@ -63,9 +63,15 @@ a {
 
 @media (min-width: 1200px) {
 	.margin-wrapper {
-		padding: 2rem 10rem;
+		padding: 1.5rem 10rem;
 		margin: 0 auto;
 		max-width: 75rem;
+	}
+}
+
+@media (min-width: 1500px) {
+	.margin-wrapper {
+		max-width: 130rem;
 	}
 }
 
@@ -128,6 +134,12 @@ a {
 @media (min-width: 1200px) {
 	.title {
 		font-size: 4.3rem;
+	}
+}
+
+@media (min-width: 1500px) {
+	.title {
+		font-size: calc(5rem + 2vw);
 	}
 }
 
@@ -318,6 +330,12 @@ a {
 	}
 }
 
+@media (min-width: 1500px) {
+	.section__text  {
+		margin-top: calc(-36% - 2rem);
+	}
+}
+
 .text__list-heading {
 	margin-top: 1.5em;
 	margin-bottom: 0;
@@ -334,6 +352,13 @@ a {
 @media (min-width: 1200px) {
 	.text__list-heading {
 		font-size: 1.3rem;
+	}
+}
+
+@media (min-width: 1500px) {
+	.text__list-heading  {
+		max-width: 30rem;
+		font-size: calc(1.5rem + .5vw);
 	}
 }
 
@@ -381,10 +406,25 @@ li {
 	}
 }
 
+@media (min-width: 1500px) {
+	.text__main  {
+		max-width: 30rem;
+		font-size: calc(1.5rem + .5vw);
+		line-height: normal;
+	}
+}
+
 .text__icon svg {
 	width: 16px;
 	height: 16px;
 	margin-bottom: -2px;
+}
+
+@media (min-width: 1500px) {
+	.text__icon svg  {
+		width: 26px;
+		height: 26px;
+	}
 }
 
 /*FOOTER*/
