--- a/style-min.css
+++ b/style-min.css
@@ -161,21 +161,6 @@ a {
   width: 100%;
   height: 100%; }
 
-.photo__credits {
-  position: absolute;
-  bottom: 1em;
-  text-transform: uppercase;
-  letter-spacing: .2em;
-  right: calc(15% + 1em);
-  font-size: .4rem;
-  letter-spacing: .16rem;
-  color: white; }
-
-@media (min-width: 1200px) {
-  .photo__credits {
-    font-size: .45rem;
-    letter-spacing: .17rem; } }
-
 .photos > .first--js {
   left: 0; }
 
@@ -415,6 +400,10 @@ li {
   width: 8px;
   height: 8px;
   margin-bottom: -1.5px; }
+
+.credit-link {
+  color: inherit;
+  border-bottom: 0.5px solid rgba(155, 155, 155, 0.2); }
 
 /*BORDER*/
 .border {
