--- a/style.css
+++ b/style.css
@@ -190,24 +190,6 @@ a {
 	height: 100%;
 }
 
-.photo__credits {
-	position: absolute;
-	bottom: 1em;
-	text-transform: uppercase;
-	letter-spacing: .2em;
-	right: calc(15% + 1em);
-	font-size: .4rem;
-	letter-spacing: .16rem;
-	color: white;
-}
-
-@media (min-width: 1200px) {
-	.photo__credits {
-		font-size: .45rem;
-		letter-spacing: .17rem;
-	}
-}
-
 .photos > .first--js {
 	left: 0;
 }
@@ -513,6 +495,11 @@ li {
 
 .footer__icon {
 
+}
+
+.credit-link {
+	color: inherit;
+	border-bottom: .5px solid rgba(155, 155, 155, .2);
 }
 
 /*BORDER*/
